Update .env.example for subproject 3 self-reliant container setup
- Add comprehensive configuration for self-reliant MCP container endpoints
- Document the new enhanced setup script for subproject 3
- Include examples for all three deployment modes
- Add detailed explanations of MCP server containers and their requirements
- Maintain backward compatibility with existing deployment modes
- Provide clear setup instructions for the new token-based authentication

--- a/.env.example
+++ b/.env.example
@@ -92,7 +92,7 @@ MCP_ENABLED=true
 # Make MCP optional - server will start even if MCP services fail
 MCP_OPTIONAL=true
 
-# MCP transport type (stdio, sse, streamable_http)
+# MCP transport type (stdio, sse, http)
 MCP_TRANSPORT=sse
 
 # MCP configuration path
@@ -118,23 +118,29 @@ GITHUB_PERSONAL_ACCESS_TOKEN=your_github_token_here
 # Get key from: https://api.nasa.gov/
 NASA_API_KEY=DEMO_KEY
 
+# Brave Search MCP server
+# Optional - enhances web search capabilities
+# Get key from: https://brave.com/search/api/
+# BRAVE_API_KEY=your_brave_api_key_here
+
 # ===================================
-# MCP SERVER ENDPOINTS (Multi-host only)
+# MCP SERVER ENDPOINTS
 # ===================================
-# Configure these if your MCP servers are running on different ports
-# Default ports are automatically used if these are not specified
+# Configure these based on your deployment mode
 
-# GitHub MCP server endpoint
-MCP_GITHUB_ENDPOINT=http://host.docker.internal:3001/sse
+# Development/External: Host-based endpoints
+# MCP_GITHUB_ENDPOINT=http://host.docker.internal:3001/sse
+# MCP_NASA_ENDPOINT=http://host.docker.internal:3002/sse
+# MCP_METMUSEUM_ENDPOINT=http://host.docker.internal:3003/sse
+# MCP_CONTEXT7_ENDPOINT=http://host.docker.internal:3004/sse
 
-# NASA MCP server endpoint  
-MCP_NASA_ENDPOINT=http://host.docker.internal:3002/sse
-
-# Metropolitan Museum MCP server endpoint
-MCP_METMUSEUM_ENDPOINT=http://host.docker.internal:3003/sse
-
-# Context7 MCP server endpoint
-MCP_CONTEXT7_ENDPOINT=http://host.docker.internal:3004/sse
+# Multi-host Self-Reliant: Container endpoints (Subproject 3)
+# MCP_GITHUB_ENDPOINT=http://mcp-github:3001/mcp
+# MCP_NASA_ENDPOINT=http://mcp-nasa:3002/mcp
+# MCP_METMUSEUM_ENDPOINT=http://mcp-metmuseum:3003/mcp
+# MCP_CONTEXT7_ENDPOINT=http://mcp-context7:3004/mcp
+# MCP_APPLESCRIPT_ENDPOINT=http://mcp-applescript:3005/mcp
+# MCP_WEBSEARCH_ENDPOINT=http://mcp-websearch:3006/mcp
 
 # ===================================
 # SERVICE DISCOVERY (Multi-host only)
@@ -212,16 +218,19 @@ CHOKIDAR_USEPOLLING=false
 # REDIS_URL=redis://redis:6379
 # REDIS_OPTIONAL=true
 #
-# MCP Configuration for external servers:
+# MCP Configuration - Self-Reliant Container Mode (Subproject 3):
 # MCP_ENABLED=true
 # MCP_OPTIONAL=true
-# MCP_TRANSPORT=sse
+# MCP_TRANSPORT=http
 # GITHUB_PERSONAL_ACCESS_TOKEN=your_github_token_here
 # NASA_API_KEY=your_nasa_api_key_here
-# MCP_GITHUB_ENDPOINT=http://host.docker.internal:3001/sse
-# MCP_NASA_ENDPOINT=http://host.docker.internal:3002/sse
-# MCP_METMUSEUM_ENDPOINT=http://host.docker.internal:3003/sse
-# MCP_CONTEXT7_ENDPOINT=http://host.docker.internal:3004/sse
+# BRAVE_API_KEY=your_brave_api_key_here
+# MCP_GITHUB_ENDPOINT=http://mcp-github:3001/mcp
+# MCP_NASA_ENDPOINT=http://mcp-nasa:3002/mcp
+# MCP_METMUSEUM_ENDPOINT=http://mcp-metmuseum:3003/mcp
+# MCP_CONTEXT7_ENDPOINT=http://mcp-context7:3004/mcp
+# MCP_APPLESCRIPT_ENDPOINT=http://mcp-applescript:3005/mcp
+# MCP_WEBSEARCH_ENDPOINT=http://mcp-websearch:3006/mcp
 # 
 # Additional services:
 # MCP_HOSTS=your-mcp-host-1:8080,your-mcp-host-2:8080
@@ -267,6 +276,23 @@ CHOKIDAR_USEPOLLING=false
 # 2. Initialize: rs.initiate()
 # 3. Verify: rs.status()
 #
+# 🛠️ SELF-RELIANT MCP SERVERS (SUBPROJECT 3):
+#
+# Subproject 3 now includes integrated MCP servers that run as containers:
+# - No external MCP server dependencies required
+# - Better resource isolation and scaling
+# - Simplified deployment and management
+# - Automatic container health checks
+# - Easy horizontal scaling of individual services
+#
+# MCP Server Containers:
+# 1. mcp-github: Repository access, issues, PRs (requires GitHub token)
+# 2. mcp-nasa: Space data and astronomy APIs (optional NASA API key)
+# 3. mcp-metmuseum: Art and cultural data (no auth required)
+# 4. mcp-context7: Documentation and code assistance (no auth required)
+# 5. mcp-applescript: macOS automation (no auth required)
+# 6. mcp-websearch: Search capabilities (optional Brave API key)
+#
 # 🛠️ SEPARATION OF CONCERNS:
 #
 # This configuration supports the new separation of concerns where:
@@ -282,24 +308,53 @@ CHOKIDAR_USEPOLLING=false
 # 4. WebSocket and API services - Depend on core services only
 
 # ===================================
-# MCP SERVER STARTUP COMMANDS (Reference)
+# SUBPROJECT 3 SETUP INSTRUCTIONS
+# ===================================
+# 
+# For the easiest setup of subproject 3 with token configuration:
+# 
+# 1. Run the enhanced setup script:
+#    bash scripts/setup-multihost.sh
+# 
+# 2. The script will prompt for:
+#    - GitHub Personal Access Token
+#    - NASA API Key
+#    - Brave Search API Key
+#    - Ollama host configuration
+#    - MongoDB configuration
+# 
+# 3. Start the deployment:
+#    make quick-docker-multi
+# 
+# 4. Access the application:
+#    http://localhost:8080 (or your configured APP_PORT)
+#
+# The setup script automatically configures all container endpoints
+# and generates secure secrets for production deployment.
+
+# ===================================
+# MCP SERVER STARTUP COMMANDS (Reference - NOT NEEDED for Subproject 3)
 # ===================================
 # For running MCP servers on your host machine, use these commands:
+# NOTE: Subproject 3 runs all MCP servers as containers - these are for reference only
 #
 # GitHub MCP Server (Port 3001):
-# npx -y @modelcontextprotocol/server-github --transport sse --port 3001
+# npx -y @modelcontextprotocol/server-github --transport http --port 3001
 # Environment: GITHUB_PERSONAL_ACCESS_TOKEN=your_token_here
 #
 # NASA MCP Server (Port 3002):
-# npx -y @programcomputer/nasa-mcp-server@latest --transport sse --port 3002
+# npx -y @programcomputer/nasa-mcp-server@latest --transport http --port 3002
 # Environment: NASA_API_KEY=your_key_here (optional, defaults to DEMO_KEY)
 #
 # Met Museum MCP Server (Port 3003):
-# npx -y metmuseum-mcp --transport sse --port 3003
+# npx -y metmuseum-mcp --transport http --port 3003
 #
 # Context7 MCP Server (Port 3004):
-# npx -y @upstash/context7-mcp --transport sse --port 3004
+# npx -y @upstash/context7-mcp --transport http --port 3004
 #
-# Note: Some MCP servers may not support SSE transport natively.
-# In that case, you'll need to check their documentation for
-# HTTP/SSE support or use stdio transport with a proxy.
+# AppleScript MCP Server (Port 3005):
+# npx -y @sampullman/applescript-mcp --transport http --port 3005
+#
+# Web Search MCP Server (Port 3006):
+# npx -y @modelcontextprotocol/server-brave-search --transport http --port 3006
+# Environment: BRAVE_API_KEY=your_key_here (optional)
